New import / export functions
You can now export your password and import it in one of two ways: - add the imported categories to the current categories or replace the current categories with the new categories.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ set(PROJECT_SOURCES
         fileclass.h
         addremoveform.h addremoveform.cpp addremoveform.ui
         keydialog.h keydialog.cpp keydialog.ui
+        importform.h importform.cpp importform.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
